<resources>
    <string name="app_name">ValidatorCrawler</string>
    <string name="info">PERSONAL INFORMATION</string>
    <string name="f101">Name</string>
    <string name="f102">Address</string>
    <string name="f103">Cell No</string>
    <string name="f104">City</string>
    <string name="f105">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="f106">Check All Certifications</string>
    <string name="f106a">Goggle</string>
    <string name="f106b">Oracle</string>
    <string name="f106c">Microsoft</string>
    <string name="f106d">Sun Micro</string>
    <string name="f106e">Other (Specify)</string>
    <string name="f106f">None of the above</string>
    <string name="submit">Submit Form</string>
</resources>
