<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <data>

        <import type="android.view.View" />

        <variable
            name="callback"
            type="com.validator.aliazaz.MainActivity" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/formValidateLayout"
                style="@style/linearlayout_view">

                <androidx.cardview.widget.CardView style="@style/cardView">

                    <LinearLayout style="@style/linearlayout_view">

                        <EditText
                            android:id="@+id/f101"
                            style="@style/EditText"
                            android:hint="@string/f101" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView style="@style/cardView">

                    <LinearLayout style="@style/linearlayout_view">

                        <EditText
                            android:id="@+id/f102"
                            style="@style/EditText"
                            android:hint="@string/f102" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView style="@style/cardView">

                    <LinearLayout style="@style/linearlayout_view">

                        <com.edittextpicker.aliazaz.EditTextPicker
                            android:id="@+id/f103"
                            style="@style/EditText"
                            android:hint="+92###-###-####"
                            android:inputType="number"
                            app:defaultValue=""
                            app:mask="+92###-###-####"
                            app:pattern="^(\\+92\\d{3,3}\\-\\d{3,3}\\-\\d{4,4})$"
                            app:type="equal" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView style="@style/cardView">

                    <LinearLayout style="@style/linearlayout_view">

                        <TextView
                            style="@style/textview"
                            android:text="@string/f105" />

                        <RadioGroup
                            android:id="@+id/f105"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/f105a"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="1dp"
                                android:text="@string/male" />

                            <RadioButton
                                android:id="@+id/f105b"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="1dp"
                                android:text="@string/female" />


                        </RadioGroup>


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView style="@style/cardView">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            style="@style/textview"
                            android:text="@string/f106" />

                        <LinearLayout
                            android:id="@+id/fldGrppocfj01"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:tag="0">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="20"
                                    android:orientation="vertical">

                                    <CheckBox
                                        android:id="@+id/f106a"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/f106a" />

                                    <CheckBox
                                        android:id="@+id/f106b"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/f106b" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="20"
                                    android:orientation="vertical">

                                    <CheckBox
                                        android:id="@+id/f106c"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/f106c" />

                                    <CheckBox
                                        android:id="@+id/f106d"
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:text="@string/f106d" />


                                </LinearLayout>

                            </LinearLayout>

                            <CheckBox
                                android:id="@+id/f106e"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/f106e" />

                            <EditText
                                android:id="@+id/f106ex"
                                style="@style/EditText"
                                android:hint="@string/f106e"
                                android:tag="f106e"
                                android:text='@{f106e.checked ? f106ex.getText().toString() : "" }'
                                android:visibility='@{f106e.checked ? View.VISIBLE : View.GONE}' />

                        </LinearLayout>


                        <CheckBox
                            android:id="@+id/f106f"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:tag="-1"
                            android:text="@string/f106f" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <!--  = = = = =  END OF FORM FIELDS  = = = = = -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="32dp">

                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_green_dark"
                    android:onClick="@{callback::btnSubmit}"
                    android:text="@string/submit"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>
</layout>